# crack-detection-and-segmentation

./: .gitignore  Makefile  README.md  generate_masks.py  infer.py  infer_yolo_tiled.py  main.py  pyproject.toml  requirements.txt  tile_dataset.py  train.py
.gemini/: settings.json
api/: app.py  config.py  schemas.py
api/routers/: health.py  inference.py  models.py  results.py  tasks.py  training.py
api/schemas/: __init__.py  requests.py  responses.py
api/services/: inference_service.py  model_manager.py  result_store.py  task_manager.py  training_service.py
api/static/: index.html
api/tests/: conftest.py  test_health.py  test_inference.py  test_models.py  test_results.py  test_tasks.py
notebooks/: Seg_UNET-plusplus-v3_dataset-v1_update01.ipynb  Seg_UNET_v2_public_CFD_dataset_v1_update01.ipynb  Seg_UNET_v2_public_CFD_dataset_v1_update02.ipynb
src/datasets/: __init__.py  loader.py
src/evaluation/: __init__.py  metrics.py
src/inference/: __init__.py  base_predictor.py  factory.py  marker_suppression.py  postprocess.py  postprocessing.py  predictor.py  unet_plusplus_predictor.py  unet_plusplus_v1_predictor.py  unet_predictor.py  yolo_predictor.py
src/ingestion/: __init__.py  image_loader.py
src/models/: __init__.py
src/notebooks/: crack_processing.ipynb
src/preprocessing/: __init__.py  marker_inpaint.py  marker_suppression.py  normalize.py  resize_images.py  shape_filter.py
src/tiling/: __init__.py  tile_generator.py  tile_merger.py
src/training/: __init__.py  losses.py
src/utils/: generate_synthetic_data.py  logger.py
(+5 files in other folders)
