[project]
name = "miroscopic-crack-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.9",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "scikit-image>=0.26.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
