[project]
name = "miroscopic-crack-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "albumentations>=2.0.8",
    "fastapi>=0.115.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pydantic-settings>=2.7.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.20",
    "scikit-image>=0.26.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.60",
    "uv>=0.11.19",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
crack-api = "api.app:main"
